-- SonyGPSAssist.cabal

name:                SonyGPSAssist
version:             0.1.0.0
synopsis:            A tool for downloading Sony GPS Assist data
license:             GPL-3
license-file:        LICENSE
author:              Frédéric BISSON
maintainer:          zigazou@free.fr
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

executable SonyGPSAssist
  main-is:             SonyGPSAssist.hs
  build-depends:       base, curl, pureMD5, directory, filepath, bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010
